--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: "Oswald", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 140%;
@@ -53,15 +53,14 @@ a {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  padding: 16px 0 49px;
+  padding: 15px 0 49px;
 }
 
 .menu {
   width: 100%;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  border-bottom: 2px solid #fff;
   margin-top: 15px;
-  padding: 27px 0 24px;
+  padding: 25px 0 24px;
 }
 
 .menu__list {
@@ -89,6 +88,8 @@ a {
 .skill,
 .carousel {
   padding: 75px 0;
+
+  background-image: url(../images/background.jpg);
 }
 
 .title {
@@ -311,6 +312,67 @@ a {
   height: 3px;
 }
 
+.contact {
+  background-color: #21062a;
+  padding: 50px 75px 57px;
+  text-align: center;
+  border-bottom: 1px solid #fff;
+}
+
+.contact__title {
+  color: #fff;
+}
+
+.contact__form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 830px;
+  margin: 0 auto;
+}
+
+.contact__input {
+  width: 256px;
+  height: 44px;
+  border: 1px solid #fff;
+  padding: 11px 14px 12px;
+  margin-bottom: 28px;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+.contact__area {
+  width: 100%;
+  padding: 14px;
+  height: 112px;
+  resize: none;
+  margin-bottom: 67px;
+  border-radius: 5px;
+}
+
+.contact__input::placeholder,
+.contact__area::placeholder {
+  font-size: 16px;
+  color: #c4c4c4;
+}
+
+.contact__input:focus,
+.contact__area:focus {
+  outline: 0;
+}
+
+.contact__btn {
+  background: #fff;
+  border-radius: 30px;
+  border: none;
+  font-size: 20px;
+  line-height: 21px;
+  color: #5a0d67;
+  padding: 19px 65px 20px;
+  cursor: pointer;
+}
+
 .footer {
   background-color: #21062a;
 }
@@ -321,7 +383,7 @@ a {
   height: 80px;
 }
 
-.footer__title{
+.footer__title {
   color: #fff;
   padding: 20px 20px;
   font-size: 26px;
