--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ a {
   height: 525px;
   bottom: 35px;
   margin-right: 250px;
-  border-radius: 60px; 
+  border-radius: 60px;
   border: 3px groove #fff;
   box-shadow: 0 0 7px rgb(122, 116, 116);
 }
@@ -115,6 +115,7 @@ a {
 
 .about__inner {
   display: flex;
+  justify-content: space-between;
 }
 
 .about__desc {
@@ -126,6 +127,7 @@ a {
 
 .about__text {
   font-size: 19px;
+  margin-left: 15px;
 }
 
 .about__info {
@@ -400,4 +402,177 @@ a {
   font-size: 26px;
 }
 
+@media (max-width: 1200px) {
+  .header__images-myphoto {
+    width: 450px;
+    height: 500px;
+    bottom: 5px;
+    margin-right: 100px;
+  }
+}
 
+@media (max-width: 1100px) {
+  .header__images-myphoto {
+    margin-right: 25px;
+  }
+
+  .header__title {
+    font-size: 50px;
+    margin-left: 65px;
+  }
+}
+
+@media (max-width: 930px) {
+  .about__list {
+    padding: 25px 0 25px 55px;
+  }
+
+  .contact__input {
+    width: 100%;
+  }
+
+  .contact__area {
+    margin-bottom: 40px;
+  }
+
+  .contact__btn {
+    width: 100%;
+  }
+}
+
+@media (max-width: 840px) {
+  .menu {
+    padding: 10px 0 20px;
+  }
+
+  .menu__list {
+    font-size: 16px;
+  }
+
+  .header__title {
+    font-size: 45px;
+    margin-left: 50px;
+  }
+
+  .about__list {
+    padding: 25px 0 25px 55px;
+  }
+  
+}
+
+@media (max-width: 810px) {
+  .menu {
+    padding: 7px 0 15px;
+  }
+
+  .menu__list {
+    font-size: 14px;
+  }
+
+  .header__title {
+    margin-bottom: 250px;
+  }
+
+  .header__images-myphoto {
+    width: 350px;
+    height: 450px;
+    bottom: 75px;
+  }
+}
+
+@media (max-width: 711px) {
+  .header__title {
+    margin-bottom: auto;
+    text-align: center;
+  }
+
+  .header__images-myphoto {
+    width: 450px;
+    height: 500px;
+    bottom: 5px;
+    top: 190px;
+    margin-right: 100px;
+  }
+
+  .header__social {
+    display: none;
+  }
+
+  .about__text {
+    font-size: 16px;
+  }
+
+  .about,
+  .skill,
+  .carousel {
+    padding: 45px 0;
+  }
+}
+
+@media (max-width: 620px) {
+  .header__images-myphoto {
+    width: 400px;
+    height: 450px;
+    margin-right: 47px;
+  }
+
+  .about,
+  .skill,
+  .carousel {
+    padding: 35px 0;
+  }
+
+  .about__inner {
+    flex-wrap: wrap;
+  }
+
+  .about__desc {
+    margin-right: 25px;
+    margin-top: 0px;
+  }
+
+  .about__text {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+
+  .about__list {
+    text-align: center;
+    font-size: 16px;
+    padding: 15px 0 15px 35px;
+  }
+
+  .skill__content {
+    grid-template-columns: repeat(1, 1fr);
+    margin-bottom: 10px;
+  }
+
+  .skill__title {
+    font-size: 18px;
+    line-height: 33px;
+  }
+
+  .skill__progressbar {
+    width: 100%;
+    margin-top: 5px;
+  }
+}
+
+@media (max-width: 520px) {
+  .carousel .slick-dots button {
+    width: 10px;
+  }
+}
+
+@media (max-width: 460px) {
+  .header__images-myphoto {
+    width: 365px;
+    height: 400px;
+    margin-right: 15px;
+  }
+
+  .header__title {
+    margin-bottom: auto;
+    text-align: center;
+  }
+}
